Fix main page of tools.wmflabs.org to work correctly on mobile devices.
Summary:
Fix main page of tools.wmflabs.org to work correctly on mobile devices.

Bug: T194943

Reviewers: bd808

Reviewed By: bd808

Subscribers: bd808

Maniphest Tasks: T194943

Differential Revision: https://phabricator.wikimedia.org/D1176

--- a/public/assets/site.css
+++ b/public/assets/site.css
@@ -77,3 +77,7 @@ a.search:hover {
   visibility: visible;
   opacity: 1;
 }
+
+.media {
+  flex-wrap: wrap;
+}
